# til

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-29-datanim-design.md
ml/cv/: README.md  cnn.py  copy-data.sh  lerobot.py  setup-gpu.sh  train.sh
ml/gpt/: setup-gpu.sh  tinygpt.py  utils.py
ml/makemore/: bigram.py  manual_backprop.ipynb  mlp.ipynb  mlp_manual.py  mlp_pytorch.py  utils.py  wavenet.py
ml/micrograd/: backprop.ipynb
ml/rl/: dqn.py  q.py  scratch.ipynb
