[project]
name = "til"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.2",
    "graphviz>=0.21",
    "gym>=0.26.2",
    "gymnasium>=1.2.3",
    "huggingface>=0.0.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "polars>=1.35.1",
    "pydantic>=2.12.4",
    "pyglet>=2.1.12",
    "pyvirtualdisplay>=3.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
